# age-sweeper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
age_sweeper/: __main__.py  cleaner.py  config.py  helpers.py  retention.py  scanner.py
tests/e2e/: test_docker.py
tests/unit/: test_cleaner.py  test_config.py  test_helpers.py  test_retention.py  test_scanner.py
