[project]
name = "age-sweeper"
version = "0.1.0"
description = "File garbage collector based on age — designed for Kubernetes CronJobs"
requires-python = ">=3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "age_sweeper" }]

[tool.poetry.scripts]
age-sweeper = "age_sweeper.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
ruff = ">=0.9"
pytest = ">=8"
pytest-cov = ">=6"
hypothesis = ">=6.100"
pre-commit = "^4.5.1"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-v", "--cov=age_sweeper", "--cov-report=term-missing"]
markers = [
    "e2e: end-to-end tests requiring Docker",
]
